--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cachetools==6.2.2
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
+dnspython==2.8.0
 et_xmlfile==2.0.0
 gitdb==4.0.12
 GitPython==3.1.45
@@ -22,6 +23,7 @@ pillow==12.0.0
 protobuf==6.33.1
 pyarrow==21.0.0
 pydeck==0.9.1
+pymongo==4.15.4
 python-dateutil==2.9.0.post0
 pytz==2025.2
 referencing==0.37.0
