--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 altair==5.5.0
+anyio==4.11.0
 attrs==25.4.0
 audioread==3.1.0
 blinker==1.9.0
@@ -12,9 +13,17 @@ cycler==0.12.1
 decorator==5.2.1
 dnspython==2.8.0
 et_xmlfile==2.0.0
+filelock==3.20.0
 fonttools==4.60.1
+fsspec==2025.10.0
 gitdb==4.0.12
 GitPython==3.1.45
+gradio_client==2.0.0
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface_hub==1.1.5
 idna==3.11
 Jinja2==3.1.6
 joblib==1.5.2
@@ -44,14 +53,17 @@ pymongo==4.15.4
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
+PyYAML==6.0.3
 referencing==0.37.0
 requests==2.32.5
 rpds-py==0.29.0
 scikit-learn==1.7.2
 scipy==1.16.3
 seaborn==0.13.2
+shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
+sniffio==1.3.1
 soundfile==0.13.1
 soxr==1.0.0
 streamlit==1.51.0
@@ -60,6 +72,7 @@ threadpoolctl==3.6.0
 toml==0.10.2
 tornado==6.5.2
 tqdm==4.67.1
+typer-slim==0.20.0
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
