--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-fastapi
-uvicorn
-pydantic
-python-multipart
 altair==5.5.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
 anyio==4.11.0
 attrs==25.4.0
 audioread==3.1.0
@@ -17,6 +15,7 @@ cycler==0.12.1
 decorator==5.2.1
 dnspython==2.8.0
 et_xmlfile==2.0.0
+fastapi==0.122.0
 filelock==3.20.0
 fonttools==4.60.1
 fsspec==2025.10.0
@@ -29,6 +28,7 @@ httpcore==1.0.9
 httpx==0.28.1
 huggingface_hub==1.1.5
 idna==3.11
+iniconfig==2.3.0
 Jinja2==3.1.6
 joblib==1.5.2
 jsonschema==4.25.1
@@ -48,14 +48,22 @@ packaging==25.0
 pandas==2.3.3
 pillow==12.0.0
 platformdirs==4.5.0
+pluggy==1.6.0
 pooch==1.8.2
 protobuf==6.33.1
 pyarrow==21.0.0
 pycparser==2.23
+pydantic==2.12.4
+pydantic_core==2.41.5
 pydeck==0.9.1
+Pygments==2.19.2
 pymongo==4.15.4
 pyparsing==3.2.5
+pytest==9.0.1
+pytest-html==4.1.1
+pytest-metadata==3.1.1
 python-dateutil==2.9.0.post0
+python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.3
 referencing==0.37.0
@@ -70,6 +78,7 @@ smmap==5.0.2
 sniffio==1.3.1
 soundfile==0.13.1
 soxr==1.0.0
+starlette==0.50.0
 streamlit==1.51.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
@@ -77,10 +86,9 @@ toml==0.10.2
 tornado==6.5.2
 tqdm==4.67.1
 typer-slim==0.20.0
+typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+uvicorn==0.38.0
 watchdog==6.0.0
-
-pytest
-pytest-html
